K8sVote/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: backend-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext: # all container on that pod will be under this security constraints .
        runAsUser: 999 # non-root
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgres-storage
          # Helps Postgres avoid root-owned issues
          securityContext: # container specfic constraints .
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: backend-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
