K8sVote/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: postgres # Apply policy to Postgres pods
  policyTypes:
    - Ingress
    - Egress

  # Ingress: allow worker-dotnet in backend-ns
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: backend-ns
          podSelector:
            matchLabels:
              app: worker-dotnet
      ports:
        - protocol: TCP
          port: 5432 # Postgres port
    - from:
        - namespaceSelector:
            matchLabels:
              name: frontend-ns
          podSelector:
            matchLabels:
              app: result-nodejs
      ports:
        - protocol: TCP
          port: 5432 # Postgres port
