K8sVote/redis-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: redis # This policy applies to Redis pods
  policyTypes:
    - Ingress
    - Egress

  # Ingress rules: allow Vote app in frontend-ns
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: frontend-ns
          podSelector:
            matchLabels:
              app: vote-app
      ports:
        - protocol: TCP
          port: 6379 # Redis port
    - from:
        - namespaceSelector:
            matchLabels:
              name: backend-ns
          podSelector:
            matchLabels:
              app: worker-dotnet
      ports:
        - protocol: TCP
          port: 6379 # Redis port
